--- a/treino3/index.html
+++ b/treino3/index.html
@@ -23,9 +23,9 @@
     const start = [0, 0];
     const goal = [5, 0];
     const blocks = [
-      [2, 4], [1, 2], [1, 3],
+      [0,5], [2, 4], [1, 2], [1, 3],
       [2, 3], [3, 3], [4, 3],
-      [4, 2], [4, 1], [4, 0], [4,5]
+      [4, 1], [4, 0], [4,5]
     ];
 
     const nActions = 4; // cima, baixo, esquerda, direita
@@ -110,9 +110,9 @@
         }             
     }
 
-    function playIA(){
+    function playIA(episolon=1){
         if(player.x == goal[0] && player.y == goal[1]) return
-        const actionIndex = chooseAction(player.x, player.y, 0.1)
+        const actionIndex = chooseAction(player.x, player.y, episolon)
         const [dx, dy] = actions[actionIndex]
         move(dx,dy,actionIndex)
     }
@@ -120,7 +120,7 @@
     function trainIA(episodes = 1000, maxSteps = 1000) {
         const alpha = 0.1;   // taxa de aprendizado
         const gamma = 0.9;   // fator de desconto
-        const epsilon = 1.0; // chance de explorar
+        let epsilon = 1.0; // chance de explorar
 
         for (let episode = 0; episode < episodes; episode++) {
             let x = start[0];
@@ -165,6 +165,8 @@
                 y = nextY;
 
                 if (x === goal[0] && y === goal[1]) break;
+
+                epsilon = Math.max(0.1, epsilon * gamma);
             }
         }
     }
@@ -193,8 +195,8 @@
         drawGrid()
     	drawGoal()
         drawBlocks()
-        playIA()
-        setTimeout(update, 300);
+        playIA(0)
+        setTimeout(update, 200);
     }
     trainIA(1000)
     update()
