qTable com rede neural (DQN)

--- a/treino3/index.html
+++ b/treino3/index.html
@@ -23,10 +23,16 @@
     const start = [0, 0];
     const goal = [5, 0];
     const blocks = [
-      [0,5], [2, 4], [1, 2], [1, 3],
-      [2, 3], [3, 3], [4, 3],
-      [4, 1], [4, 0], [4,5]
+      [0, 5], 
+      [2, 4], 
+      [1, 2], 
+      [1, 3],
+      [2, 3], 
     ];
+
+    const alpha = 0.1; // taxa de aprendizado
+    const gamma = 0.9; // fator de desconto
+    let epsilon = 0.1; // chance de explorar
 
     const nActions = 4; // cima, baixo, esquerda, direita
 
@@ -55,6 +61,13 @@
     }
 
 
+    function sortearBlocos(){
+    	for(let i = 0; i < blocks.length; i++){
+        	const x = Math.floor(Math.random() * cols)
+            const y = Math.floor(Math.random() * rows)
+            blocks[i] = [x,y]
+        }
+    }
 
     function drawGrid(){
         //cria grid
@@ -102,25 +115,22 @@
         qTable[`${player.x},${player.y}`][actionIndex] += 1
     }
 
-    function chooseAction(x, y, episolon){
-        if(Math.random() < episolon){
+    function chooseAction(x, y, epsilon){
+        if(Math.random() < epsilon){
         	return Math.floor(Math.random() * nActions)
         }else{
             return qTable[`${x},${y}`].indexOf(Math.max(...qTable[`${x},${y}`]))
         }             
     }
 
-    function playIA(episolon=1){
+    function playIA(){
         if(player.x == goal[0] && player.y == goal[1]) return
-        const actionIndex = chooseAction(player.x, player.y, episolon)
+        const actionIndex = chooseAction(player.x, player.y, 0.1)
         const [dx, dy] = actions[actionIndex]
         move(dx,dy,actionIndex)
     }
 
     function trainIA(episodes = 1000, maxSteps = 1000) {
-        const alpha = 0.1;   // taxa de aprendizado
-        const gamma = 0.9;   // fator de desconto
-        let epsilon = 1.0; // chance de explorar
 
         for (let episode = 0; episode < episodes; episode++) {
             let x = start[0];
@@ -147,7 +157,11 @@
                 if (nextX === goal[0] && nextY === goal[1]){
                     reward = 100
                 }else{
-                    reward = -1;
+                    if(qTable[`${player.x},${player.y}`] != [0,0,0,0]){
+                        reward = -5
+                    }else{
+                        reward = -1;
+                    }
                 }
 
                 if (isBlocked) {
@@ -166,7 +180,7 @@
 
                 if (x === goal[0] && y === goal[1]) break;
 
-                epsilon = Math.max(0.1, epsilon * gamma);
+                epsilon = Math.max(0.01, epsilon * gamma);
             }
         }
     }
@@ -195,8 +209,8 @@
         drawGrid()
     	drawGoal()
         drawBlocks()
-        playIA(0)
-        setTimeout(update, 200);
+        playIA()
+        setTimeout(update, 300);
     }
     trainIA(1000)
     update()
